// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> debe de mostrar un conjunto de categorias 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <div>
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <div />
</Fragment>
`;
